# probable-goose-machine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PRD.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: ai-ml-engineer.md  hiring-manager.md  product-owner.md  qa-engineer.md  software-engineer.md  ux-engineer.md
.claude/hooks/: auto_approve_readonly_bash.py
.claude/skills/audit-docs/: SKILL.md
.claude/skills/dev/: SKILL.md
.github/workflows/: ci.yml  sync-to-hub.yml  warm-keeper.yml
reports/: SUMMARY.md
scripts/: build_cv_fixtures.py  eval_corpus.py  run_bias_smoke.py  spike_minimax.py
scripts/spikes/: inspect_minimax_key_capabilities.py  inspect_minimax_vision_transcripts.py  inspect_minimax_vision_v3.py  spike_minimax_token_plan_vlm.py  spike_minimax_vision.py  spike_minimax_vision_v2.py
src/gander/: confidence.py  config.py  errors.py  extract.py  growth.py  ingest.py  llm.py  market.py  normalize.py  obs.py  pipeline.py  redact.py  report.py  salary.py  schemas.py  score.py  sections.py  source_rubric.py  tenure.py  timeline.py  verify.py
src/gander/prompts/: confidence_step_a.md  confidence_step_b.md  extract.md  growth.md  ingest_docx.md  ingest_vlm.md  salary.md  score.md  verify_compat.md
src/jobfit/: confidence.py  errors.py  extract.py  growth.py  ingest.py  llm.py  obs.py  pipeline.py  redact.py  report.py  salary.py  schemas.py  score.py  verify.py
src/jobfit/prompts/: confidence_step_a.md  confidence_step_b.md  extract.md  growth.md  salary.md
tasks/: INDEX.md  PLAN.md  T00_bootstrap.md  T00_dev-report.md  T01_dev-plan.md  T01_dev-report.md  T01_schemas.md  T02_dev-plan.md  T02_dev-report.md  T02_utils.md  T03_ci_precommit.md  T03_dev-plan.md  T03_dev-report.md  T04_cvs_part1.md  T04_dev-report.md  T05_dev-report.md  T05_spike.md  T06_cvs_part2.md  T06_dev-plan.md  T06_dev-report.md  T07_dev-plan.md  T07_ingest.md  T08_dev-plan.md  T08_dev-report.md  T08_redact.md  T09_dev-plan.md  T09_dev-report.md  T09_extract.md  T10_dev-plan.md  T10_score.md  T11_dev-plan.md  T11_dev-report.md  T11_salary.md  T12_confidence.md  T12_dev-plan.md  T12_dev-report.md  T13_dev-plan.md  T13_dev-report.md  T13_growth.md  T14_dev-plan.md  (+65 more)
tests/: _fakes.py  conftest.py  test_a11y_contrast.py  test_acceptance.py  test_acceptance_cz.py  test_adversarial.py  test_app_download.py  test_arbitrary_cv_smoke.py  test_bias_smoke.py  test_concurrency.py  test_confidence_judge.py  test_confidence_unit.py  test_config.py  test_ddg_cassettes.py  test_degradation_synthetic.py  test_errors_obs.py  test_eval_corpus.py  test_extract.py  test_failures.py  test_growth_unit.py  test_ingest.py  test_llm.py  test_market.py  test_normalize.py  test_obs.py  test_partial_failure_streaming.py  test_pipeline_fast.py  test_pipeline_smoke.py  test_privacy_copy.py  test_privacy_obs.py  test_redact.py  test_render.py  test_report.py  test_salary.py  test_schemas.py  test_score.py  test_source_rubric.py  test_tenure.py  test_timeline.py  test_verify.py
tests/e2e/: conftest.py  test_app_e2e.py
tests/fixtures/: vision_anchors.json
tests/fixtures/cvs/: 01_junior_da_novotny.docx  01_junior_da_novotny.txt  02_da_svoboda.txt  03_ds_horak.txt  04_mle_kralova.docx  04_mle_kralova.txt  05_mlops_benes.txt  06_nlp_ds_pokorna.docx  06_nlp_ds_pokorna.txt  07_senior_ds_holub.txt  08_staff_ml_engineer_dvorak.txt  09_research_phd_marek.txt  09b_research_phd_marek_anon.txt  10_head_of_data_zemanova.docx  10_head_of_data_zemanova.txt  11_cz_bilingual_member_of_staff_strelcova.txt  12_cz_academic_simek.txt  13_cz_corporate_manazer_havelka.txt  14_nontech_marketing_fialova.txt  15_career_changer_nurse_to_data_prochazkova.txt  16_noncz_berlin_logistics_neumann.txt  SOURCES.md
tests/fixtures/ddg/: README.md  market_cassettes.json
