[project]
name = "jobfit"
version = "0.1.0"
description = "Job Fit & Salary Estimator"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.2",
    "gradio>=6.14.0",
    "openai>=2.36.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobfit"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/jobfit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "fast: pure-function unit tests with no external IO (<1s each)",
  "slow: pipeline-level tests or anything >1s",
  "live: requires API keys (MiniMax, etc.) and network",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
