[project]
name = "gander"
version = "0.1.0"
description = "Gander — a closer look at any CV."
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.2",
    "gradio>=6.14.0",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.24.0",
    "pydantic>=2,<2.13",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gander"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/gander"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "fast: pure-function unit tests with no external IO (<1s each)",
  "slow: pipeline-level tests or anything >1s",
  "live: requires API keys (OpenRouter, etc.) and network",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-rerunfailures>=16.0",
    "pytest-xdist>=3.6",
    "reportlab>=4.5.0",
    "ruff>=0.15.12",
]
